# videopilot

./: COLLABORATION.md  IMPLEMENTATION_PLAN.md  README.md  download.html  pyproject.toml  session-ses_335f.md
.openclaw/: workspace-state.json
api/: main.py  rate_limiter.py  sanitization.py  security.py
core/: __init__.py  base_module.py  cli.py  config.py  input_handler.py  model_manager.py  orchestrator.py  pipeline.py  task_router.py  video_io.py
modules/: __init__.py
modules/audio_visual/: __init__.py  auto_subtitles.py
modules/composition/: __init__.py  video_compositing.py
modules/enhancement/: __init__.py  color_grading.py
modules/generation/: __init__.py  text_to_video.py
modules/generation/image_to_video/: __init__.py
modules/generation/text_to_video/: __init__.py
modules/generation/video_to_video/: __init__.py
modules/manipulation/: __init__.py  object_removal.py
modules/multimodal/: __init__.py  text_to_speech.py
modules/smart_edit/: __init__.py  scene_detection.py
modules/style/: __init__.py  artistic_filter.py
modules/temporal/: __init__.py  slow_motion.py
rust/: Cargo.toml
rust/src/: frame.rs  lib.rs
tests/: conftest.py
tests/test_core/: test_base_module.py  test_config.py  test_input_handler.py
tests/test_modules/test_enhancement/: test_color_grading.py
tests/test_modules/test_smart_edit/: test_scene_detection.py
tests/test_pipeline/: test_pipeline.py
